--- a/vimfiles/dein/nvim/dein_lazy.toml
+++ b/vimfiles/dein/nvim/dein_lazy.toml
@@ -26,3 +26,7 @@ hook_source = '''
 on_i  = 1
 on_ft = ['snippet']
 depends = ['neosnippet-snippets']
+
+[[plugins]]
+repo      = 'vim-scripts/occur.vim'
+on_cmd    = ['Occur']
