--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,19 +24,13 @@ set-option -g renumber-windows on
 set-option -g default-terminal "xterm"
 
 # 非アクティブなウィンドウの色
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
 
 # アクティブなウィンドウの色
-setw -g window-status-current-fg white
-setw -g window-status-current-bg black
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=black,bright
 
 # 最後に選択したウィンドウの色
-setw -g window-status-last-fg blue
-setw -g window-status-last-bg default
-setw -g window-status-last-attr bright
+setw -g window-status-last-style fg=blue,bg=default,bright
 
 # set-window-option -g window-status-alert-bg black
 # set-window-option -g window-status-alert-fg yellow
@@ -75,13 +69,10 @@ setw -g window-status-last-attr bright
 # set -g window-active-style 'fg=colour251,bg=default'
 
 # Copy mode colors
-set-window-option -g mode-fg colour3
-set-window-option -g mode-bg colour0
+set-window-option -g mode-style fg=colour3,bg=colour0
 
 # コマンドラインの色を設定する
-set -g message-fg black
-set -g message-bg yellow
-set -g message-attr bright
+set -g message-style fg=black,bg=yellow,bright
 
 # pane number display
 # set-option -g display-panes-active-colour blue #blue
