[tmux.conf] status-style変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,8 +90,7 @@ set-option -g status-position bottom
 # set -g status-bg white
 # set -g status-fg black
 # status line の背景色を指定する。
-set-option -g status-fg white
-set-option -g status-bg blue
+set-option -g status-style fg=white,bg=blue
 
 ## 左パネルを設定する
 set -g status-left-length 40
