--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,7 +90,7 @@ set-option -g status-position bottom
 # set -g status-bg white
 # set -g status-fg black
 # status line の背景色を指定する。
-set-option -g status-style fg=white,bg=blue
+set-option -g status-style fg=white,bg=black
 
 ## 左パネルを設定する
 set -g status-left-length 40
