--- a/vimfiles/dein/nvim/dein_lazy.toml
+++ b/vimfiles/dein/nvim/dein_lazy.toml
@@ -16,9 +16,9 @@ on_i = 1
 [[plugins]]
 repo = 'Shougo/neosnippet'
 hook_source = '''
-  imap <C-Space> <Plug>(neosnippet_expand_or_jump)
-  smap <C-Space> <Plug>(neosnippet_expand_or_jump)
-  xmap <C-Space> <Plug>(neosnippet_expand_target)
+  imap <C-s> <Plug>(neosnippet_expand_or_jump)
+  smap <C-s> <Plug>(neosnippet_expand_or_jump)
+  xmap <C-s> <Plug>(neosnippet_expand_target)
   if has('conceal')
     set conceallevel=2 concealcursor=niv
   endif
