--- a/.ideavimrc
+++ b/.ideavimrc
@@ -47,3 +47,4 @@ nnoremap <Space>s :source ~/.ideavimrc<CR>
 " nnoremap / :action Find<CR>
 " nnoremap n :action FindNext<CR>
 " nnoremap N :action FindPrevious<CR>
+set ideajoin
