[vscode] move the cursor by each display line with word wrapping
* VsCodeVimでEscでhighlightを消す
* jsonをvimで開いたときにダブルクォートが消えないようにする

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -36,5 +36,14 @@
             ]
         },
     ],
-    "vim.neovimPath": "/usr/local/bin//nvim"
+    "vim.neovimPath": "/usr/local/bin//nvim",
+    "vim.normalModeKeyBindings": [
+
+    ],
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": ["<Esc>"],
+            "commands": [":nohl"]
+        }
+    ]
 }
