[vscode] Go to definition in new tab without changing the view
https://stackoverflow.com/questions/50879459/go-to-definition-in-new-tab-without-changing-the-view

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -46,5 +46,6 @@
             "commands": [":nohl"]
         }
     ],
-    "window.zoomLevel": 0
+    "window.zoomLevel": 0,
+    "workbench.editor.enablePreview": false
 }
